add function change color subway

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -240,7 +240,7 @@ input[type=number] {
             .subway_img_wrapper {
                 margin-right: 8px;
 
-                img {
+                svg {
                     display: block;
                     width: 20px;
                     height: 20px;
