--- a/css/layout.scss
+++ b/css/layout.scss
@@ -6689,6 +6689,14 @@ section.langame_software_wrapper {
                                 }
 
                                 .tab.active {
+                                    .main-error{
+                                        font-style: normal;
+                                        font-weight: 500;
+                                        font-size: 16px;
+                                        line-height: 1;
+                                        color: #C4C4C4;
+                                        margin-bottom: 16px;
+                                    }
 
                                     &.block_active {
                                         display: block;
