--- a/css/layout.scss
+++ b/css/layout.scss
@@ -70,11 +70,18 @@ input[type=number] {
 
     .search_club_img_wrapper {
         position: relative;
+        width: 100%;
+        height: 220px;
 
         .search_club_img {
+            width: 100%;
+            height: 100%;
+
             img {
                 width: 100%;
+                height: 100%;
                 border-radius: 14px 14px 0 0;
+                object-fit: cover;
             }
         }
 
@@ -97,6 +104,10 @@ input[type=number] {
                 width: 18px;
                 height: 18px;
                 margin: 0 4px;
+            }
+
+            &:empty{
+                padding: 0;
             }
         }
 
@@ -126,6 +137,10 @@ input[type=number] {
                 font-size: 14px;
                 line-height: 1.2;
                 color: #ffffff;
+            }
+
+            &:empty{
+                padding: 0;
             }
         }
 
@@ -1249,6 +1264,7 @@ section.search_club_wrapper {
 
         .search_club_list {
             display: flex;
+            width: calc(100% + 44px);
             flex-direction: row;
             justify-content: flex-start;
             align-items: stretch;
@@ -1472,10 +1488,15 @@ section.articles_wrapper {
                     height: 100%;
 
                     .article_img_wrapper {
+                        width: 100%;
+                        height: 188px;
+
                         img {
                             display: block;
                             width: 100%;
+                            height: 100%;
                             border-radius: 14px 14px 0 0;
+                            object-fit: cover;
                         }
                     }
 
@@ -1614,12 +1635,17 @@ section.article_page_main_banner_wrapper {
         position: relative;
         border-radius: 20px;
         overflow: hidden;
+        width: 100%;
 
         .article_page_main_banner_img {
+            width: 100%;
+            height: 384px;
+
             img {
                 display: block;
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
 
@@ -2332,10 +2358,12 @@ section.personal_page_wrapper {
 
                 .tab {
                     .club_list_content {
+                        width: calc(100% + 78px);
                         display: flex;
                         flex-direction: row;
                         justify-content: flex-start;
                         align-items: stretch;
+                        flex-wrap: wrap;
                         margin: 0 -39px;
 
                         .club_list_item {
@@ -6279,15 +6307,6 @@ section.langame_software_wrapper {
                                 }
                             }
 
-                            .add_photo_instruction{
-                                font-style: normal;
-                                font-weight: 400;
-                                font-size: 16px;
-                                line-height: 1;
-                                color: #C4C4C4;
-                                margin-bottom: 32px;
-                            }
-
                             .photo_gallery {
                                 .add_photo_preview_wrapper {
                                     .add_photo_preview {
@@ -6399,6 +6418,7 @@ section.langame_software_wrapper {
                                     }
                                 }
                             }
+
 
                             .marketing_event_wrapper {
                                 padding: 48px 0 0;
@@ -6689,14 +6709,6 @@ section.langame_software_wrapper {
                                 }
 
                                 .tab.active {
-                                    .main-error{
-                                        font-style: normal;
-                                        font-weight: 500;
-                                        font-size: 16px;
-                                        line-height: 1;
-                                        color: #C4C4C4;
-                                        margin-bottom: 16px;
-                                    }
 
                                     &.block_active {
                                         display: block;
@@ -6771,17 +6783,6 @@ section.langame_software_wrapper {
 
                             .work_time_wrapper {
                                 padding: 50px 0 0;
-                                position: relative;
-
-                                .error {
-                                    position: absolute;
-                                    left: 0;
-                                    top: 25px;
-                                    display: block;
-                                    width: 100%;
-                                    text-align: left;
-                                    color: rgba(220, 0, 0, 0.4);
-                                }
 
                                 .work_time_item {
                                     label {
@@ -7194,6 +7195,24 @@ section.langame_software_wrapper {
                                                     background-image: url("../img/fill-white.svg");
                                                 }
                                             }
+                                        }
+                                    }
+                                }
+
+                                .add_photo_list {
+                                    grid-template-columns: repeat(2, 1fr);
+                                    grid-gap: 8px;
+                                    margin-bottom: 46px;
+
+                                    .add_photo_item {
+                                        width: 100%;
+                                        height: 128px;
+
+                                        &:first-child {
+                                            grid-column: 1/3;
+                                            grid-row: 1/3;
+                                            width: 100%;
+                                            height: 256px;
                                         }
                                     }
                                 }
