--- a/css/layout.scss
+++ b/css/layout.scss
@@ -2597,6 +2597,7 @@ section.personal_page_wrapper {
                     .tab {
                         .club_list_content {
                             display: block;
+                            width: 100%;
                             margin: 0;
 
                             .club_list_item {
