--- a/css/layout.scss
+++ b/css/layout.scss
@@ -5004,6 +5004,7 @@ section.add_club_page_start_wrapper {
                         text-align: center;
                         color: #ffffff;
                         cursor: pointer;
+                        transition: box-shadow 0.2s;
 
                         &:hover {
                             box-shadow: 0 0 6px #dc0000;
@@ -5124,6 +5125,7 @@ section.add_club_page_start_wrapper {
                         text-align: center;
                         color: #ffffff;
                         cursor: pointer;
+                        transition: box-shadow 0.2s;
 
                         &:hover {
                             box-shadow: 0 0 6px #dc0000;
