--- a/css/layout.scss
+++ b/css/layout.scss
@@ -105,10 +105,6 @@ input[type=number] {
                 height: 18px;
                 margin: 0 4px;
             }
-
-            &:empty{
-                padding: 0;
-            }
         }
 
         .club_distance {
@@ -336,6 +332,10 @@ input[type=number] {
                     &:empty{
                         display: none;
                     }
+                }
+
+                .club_features_qty:empty + .club_features_img_wrapper{
+                    display: none;
                 }
             }
         }
