fix upload photo validation

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -6424,6 +6424,13 @@ section.langame_software_wrapper {
                                 margin-bottom: 5px;
                             }
 
+                            .add_photo_error{
+                                position: absolute;
+                                display: block;
+                                width: 100%;
+                                text-align: left;
+                                color: #f19999;
+                            }
 
                             .photo_gallery {
                                 .add_photo_preview_wrapper {
